--- a/video.css
+++ b/video.css
@@ -4,7 +4,11 @@
     column-gap: 16px;
     row-gap: 20px;
 }
-
+@media(max-width : 600px){
+    .video-grid{
+        grid-template-columns : 1fr 1fr;
+    }
+}
 .thumbnail{
     width : 100%;
 }
@@ -45,4 +49,5 @@
     background-color: rgba(0, 0 ,0,0.7);
     color: white;
     border-radius: 5px;
+
 }
